[project]
name = "conditionme"
version = "0.0.1"
description = "A library for finetuning language models via decision transformer / conditioning / upside-down reinforcement learning!"
authors = [
    { name = "James Chua", email = "chuajamessh@gmail.com"}
    ]
readme = "readme.md"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
dependencies = [
    "datasets>=1.17.0",
    "torch>=1.4.0",
    "tqdm",
    "transformers",
    "accelerate"
]