[tool]
[tool.poetry]
name = "conditionme"
version = "0.0.3"
homepage = "https://github.com/thejaminator/conditionme"
description = "A library for finetuning language models via decision transformer / conditioning / upside-down reinforcement learning!"
authors = ["James Chua <chuajamessh@gmail.com>"]
readme = "readme.md"
license =  "MIT"
classifiers=[
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "conditionme" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
torch = {version = "^1.4.0"}
tqdm = {version = "^4.62.0"}
transformers = {version = "*"}
accelerate = {version = "*"}
datasets = {version = "*"}
slist = {version = "*"}
typer = {version = "*"}
pandas = {version = "*"}
seaborn = {version = "^0.12.2"}
matplotlib = {version = "^3.5.3"}
scipy = {version = "^1.10.0"}

[tool.poetry.dev-dependencies]
black  = { version = "^21.5b2", optional = true}
mypy = {version = "^0.991", optional = true}
pytest  = { version = "^6.2.4", optional = true}
pytest-cov  = { version = "^2.12.0", optional = true}
tox  = { version = "^3.20.1", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^20.3.1", optional = true}
toml = {version = "^0.10.2", optional = true}


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0", "twine"]
build-backend = "poetry.core.masonry.api"
